buildscript {
    ext {
        // If you run spring application with 1.5.9, change springBootVersion.
        springBootVersion = '2.0.0.M7'
//        springBootVersion = '1.5.9.RELEASE'
    }

    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
        maven {
            url 'https://repo.spring.io/libs-milestone'
        }
        maven {
            url 'https://repo.spring.io/libs-snapshot'
        }
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id 'idea'
    id 'java-library'
    id 'application'
}

apply plugin: 'org.springframework.boot'

repositories {
    mavenCentral()
}

afterEvaluate {
    repositories {
        jcenter()
        maven {
            url 'https://repo.spring.io/libs-milestone'
        }
        mavenCentral()
    }

    compileJava {
        sourceCompatibility = 9
        targetCompatibility = 9

        doFirst {
            options.fork = true
            options.forkOptions.executable = 'javac'
            options.sourcepath = files(sourceSets.main.java.srcDirs)

            options.encoding = "UTF-8"
            options.compilerArgs = [
//                    '--module-source-path', sourceSets.main.java.srcDirs,
                    '--module-path', classpath.asPath,
            ]
            classpath = files()
        }
    }

    springBoot {
        mainClassName = "soudegesu.springboot.jdknine.main.demo.DemoApplication"
    }

    bootRun {
        doFirst {
            jvmArgs += [
                    "--module-path", classpath.asPath,
//                    "--add-modules", "java.sql",
//                    "--add-exports", "java.sql/java.sql=ALL-UNNAMED",
//                    "--add-reads", "java.sql=ALL-UNNAMED",
//                    "--add-modules", "java.xml.bind",
                    "--module", "soudegesu.springboot.jdknine.main.demo/soudegesu.springboot.jdknine.main.demo.DemoApplication",
                    "-X"
            ]
            classpath = files()
        }
    }
}

ext {
    // If you run spring application with 1.5.9, change springBootVersion.
    springBootVersion = '2.0.0.M7'
//        springBootVersion = '1.5.9.RELEASE'
}

dependencies {
    // springboot
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
//    compile('org.springframework.boot:spring-boot-starter-security')
    implementation("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
    implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
        exclude module: "spring-boot-starter-tomcat"
    }

    implementation "org.springframework.boot:spring-boot-starter-jetty:${springBootVersion}"
    // database
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
//    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'

    testImplementation('org.springframework.boot:spring-boot-starter-test')
//    testImplementation('org.springframework.security:spring-security-test')
}

task wrapper (type: Wrapper){
    gradleVersion = '4.4'
}
